2005-10-25  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Add critical bug #4863 to the 1.0.4 roadmap.

2005-10-25  Carl Worth  <cworth@cworth.org>

	* BUGS: Add mention of suspected bug in PS backend.

2005-10-18  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Mark the composite-integer-translate-source test as now
	passing for the PS backend (6 to go).

	* src/cairo-ps-surface.c: (pattern_type_supported),
	(pattern_operation_needs_fallback): Use fallbacks for any
	operation using a pattern other than a solid pattern, since it's
	the only type that will actually emit anything right now.

	* src/cairo-ps-surface.c: (emit_surface_pattern),
	(emit_linear_pattern), (emit_radial_pattern): Add comments
	indicating these functions are not yet implemented.

2005-10-18  Carl Worth  <cworth@cworth.org>

	Reviewed by: keithp

	* ROADMAP: Mark the operator-source and trap-clip tests as now
	passing for the PS backend (7 to go).
	
	* src/cairo-ps-surface.c: (_ps_output_add_fallback_area),
	(_ps_output_finish), (_ps_output_surface_create): Replace the
	surface->fallback_region with a page-level surface->fallback
	Boolean instead, since that's all it was being used as anyway.

	* src/cairo-ps-surface.c: (_ps_output_composite),
	(_ps_output_fill_rectangles), (_ps_output_composite_trapezoids),
	(_ps_output_intersect_clip_path), (_ps_output_show_glyphs): Do
	nothing in the ps_output->fallback case.
	
	* src/cairo-ps-surface.c: (_ps_output_render_fallbacks): Do
	nothing in the ! ps_output->fallback case.

2005-10-18  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Added list of 9 remaining PS backend test suite
	failures to the 1.2.0 roadmap.

2005-10-18  Carl Worth  <cworth@cworth.org>

	* test/text-antialias-none-ps-rgb24-ref.png:
	* test/text-antialias-subpixel-ps-rgb24-ref.png: Add reference
	images for antialiasing modes which are basically not applicable
	to the PS output.

2005-10-14  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am: