@@ -1040,7 +1040,13 @@ static const cairo_surface_backend_t cairo_xcb_surface_backend = {
     NULL, /* _cairo_xcb_surface_set_clip_region */
     NULL, /* intersect_clip_path */
     _cairo_xcb_surface_get_extents,
-    NULL /* show_glyphs */
+    NULL, /* show_glyphs */
+    NULL, /* fill_path */
+    NULL, /* get_font_options */
+    NULL, /* flush */
+    NULL, /* mark_dirty_rectangle */
+    NULL, /* scaled_font_fini */
+    NULL  /* scaled_glyph_fini */
 };
 
 /**
